--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Shop Master",
-  "name": "Shop Master - Machine Shop Management",
+  "short_name": "ShopForge",
+  "name": "ShopForge - Manufacturing Control System",
   "icons": [
     {
       "src": "favicon.ico",
